# portfolio

./: .gitignore  README.md  atlantica.ipynb  capital_gains.ipynb  excel.ipynb  main.py  pyproject.toml
data/: portfolio.xlsx
portfolio/: base.py  currency.py
